--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "scripts": {
-    "start": "node server --port 8080 --public dist/public",
-    "dev": "npx run-p start \"build:client -- --dev --watch\"",
-    "build:client": "node ./scripts/build-client.js",
-    "build:server": "node ./scripts/build-server.js",
+    "start": "npx run-p serve \"build -- --dev --watch\"",    
+    "serve": "serve -l 8080",
+    "build": "node ./build.js",
     "lint": "npx eslint ./src"
   },
   "rollup": {
@@ -13,17 +12,12 @@
     ],
     "staticFiles": []
   },
-  "serverDependencies": [
-    "express",
-    "minimist"
-  ],
   "dependencies": {
-    "@emotion/core": "^10.0.21",
-    "express": "^4.17.1",
-    "minimist": "^1.2.0",
+    "@emotion/core": "^10.0.22",
     "prop-types": "^15.7.2",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2"
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-helmet": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
@@ -36,26 +30,29 @@
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-react": "^7.6.3",
     "@babel/register": "^7.6.2",
+    "@emotion/babel-preset-css-prop": "^10.0.22",
     "@types/jest": "^24.0.19",
     "babel-eslint": "^10.0.3",
-    "chokidar": "^2.1.8",
-    "eslint": "^5.16.0",
-    "eslint-plugin-jest": "^22.19.0",
+    "chokidar": "^3.2.2",
+    "eslint": "^6.5.1",
+    "eslint-plugin-jest": "^22.20.0",
     "eslint-plugin-react": "^7.16.0",
     "fast-async": "^6.3.8",
-    "glob": "^7.1.4",
-    "node-sass": "^4.12.0",
+    "glob": "^7.1.5",
+    "minimist": "^1.2.0",
+    "node-sass": "^4.13.0",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^2.7.1",
-    "rollup": "^1.23.1",
-    "rollup-plugin-alias": "^1.5.2",
+    "rimraf": "^3.0.0",
+    "rollup": "^1.25.2",
+    "rollup-plugin-alias": "^2.2.0",
     "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^9.3.3",
-    "rollup-plugin-node-resolve": "^4.2.4",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-replace": "^2.1.1",
-    "rollup-plugin-terser": "^4.0.4",
-    "systemjs": "^3.1.6"
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-terser": "^5.1.2",
+    "serve": "^11.2.0",
+    "systemjs": "^6.1.4"
   },
   "babelOptions": {
     "presets": [
@@ -69,7 +66,8 @@
           ]
         }
       ],
-      "@babel/preset-react"
+      "@babel/preset-react",
+      "@emotion/babel-preset-css-prop"
     ],
     "plugins": [
       [
@@ -98,5 +96,5 @@
   "author": {
     "name": "Igor Sotnikov",
     "email": "sotnikov@kemsu.ru"
-  }  
+  }
 }
