--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "scripts": {
-    "start": "npx run-p serve \"build -- --dev --watch\"",    
+    "start": "npx run-p serve \"build:dev\"",
     "serve": "serve -l 8080",
-    "build": "node ./build.js",
+    "build:dev": "npx rollup --config --watch",
+    "build": "npx rollup --config --environment BUILD:production",    
     "lint": "npx eslint ./src"
   },
   "rollup": {
     "inputs": [
-      "index.js",
-      "apps/**/index.js"
+      "apps/*/index.js",
+      "apps/**/index.dl.js"
     ],
     "staticFiles": []
   },
@@ -17,7 +18,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "@kemsu/react-routing": "file:../../@kemsu/react-routing",
+    "@kemsu/eios-ui": "file:../../@kemsu/eios-ui"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
@@ -46,7 +49,9 @@
     "rollup": "^1.25.2",
     "rollup-plugin-alias": "^2.2.0",
     "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-cleaner": "^1.0.0",
     "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-copy": "^3.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-replace": "^2.2.0",
