--- a/package.json
+++ b/package.json
@@ -1,69 +1,52 @@
 {
   "scripts": {
-    "start": "npx run-p serve \"build:dev\"",
-    "serve": "serve -l 8080",
-    "build:dev": "npx rollup --config --watch",
-    "build": "npx rollup --config --environment BUILD:production",    
+    "start": "npx webpack-dev-server --mode development --hot",
+    "build:dev": "npx webpack --mode development",
+    "build:prod": "npx webpack --mode production",
     "lint": "npx eslint ./src"
-  },
-  "rollup": {
-    "inputs": [
-      "apps/*/index.js",
-      "apps/**/index.dl.js"
-    ],
-    "staticFiles": []
-  },
+  },  
   "dependencies": {
     "@emotion/core": "^10.0.22",
+    "@kemsu/eios-ui": "^0.2.0",
+    "@kemsu/react-routing": "^1.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
-    "@kemsu/react-routing": "file:../../@kemsu/react-routing",
-    "@kemsu/eios-ui": "file:../../@kemsu/eios-ui"
+	"react-hot-loader": "^4.12.15",
+    "tinycolor2": "^1.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-decorators": "^7.6.0",
     "@babel/plugin-proposal-optional-chaining": "^7.6.0",
-    "@babel/plugin-proposal-pipeline-operator": "^7.5.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-react": "^7.6.3",
-    "@babel/register": "^7.6.2",
     "@emotion/babel-preset-css-prop": "^10.0.22",
     "@types/jest": "^24.0.19",
     "babel-eslint": "^10.0.3",
-    "chokidar": "^3.2.2",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.2.0",
     "eslint": "^6.5.1",
     "eslint-plugin-jest": "^22.20.0",
     "eslint-plugin-react": "^7.16.0",
     "fast-async": "^6.3.8",
-    "glob": "^7.1.5",
-    "minimist": "^1.2.0",
-    "node-sass": "^4.13.0",
-    "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.0",
-    "rollup": "^1.25.2",
-    "rollup-plugin-alias": "^2.2.0",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-cleaner": "^1.0.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-copy": "^3.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-terser": "^5.1.2",
-    "serve": "^11.2.0",
-    "systemjs": "^6.1.4"
+    "file-loader": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   },
   "babelOptions": {
+	"babelrc": false,
     "presets": [
       [
         "@babel/preset-env",
-        {
+        {          
           "loose": true,
           "exclude": [
             "transform-async-to-generator",
@@ -83,13 +66,7 @@
       ],
       "@babel/plugin-syntax-dynamic-import",
       "@babel/plugin-proposal-class-properties",
-      "@babel/plugin-proposal-optional-chaining",
-      [
-        "@babel/plugin-proposal-pipeline-operator",
-        {
-          "proposal": "minimal"
-        }
-      ],
+      "@babel/plugin-proposal-optional-chaining",      
       [
         "@babel/plugin-proposal-decorators",
         {
