--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "start": "npx webpack-dev-server --mode development",
     "build:dev": "npx webpack --mode development",
     "build:prod": "npx webpack --mode production",
-    "lint": "npx eslint ./src"
+    "lint": "npx eslint ./src",
+    "git:pull": "git pull origin master",
+    "git:push": "git push origin master",
+    "deploy": "npx run-s git:pull git:push build:prod"
   },
   "dependencies": {
     "@emotion/core": "^10.0.22",
@@ -36,6 +39,7 @@
     "fast-async": "^6.3.8",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "npm-run-all": "^4.1.5",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
