--- a/package.json
+++ b/package.json
@@ -11,31 +11,33 @@
   "dependencies": {
     "@emotion/core": "^10.0.22",
     "@hot-loader/react-dom": "^16.11.0",
-    "@kemsu/eios-ui": "^0.2.0",
+    "@kemsu/eios-ui": "^0.2.1",
     "@kemsu/react-routing": "^1.2.0",
+    "jwt-decode": "^2.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
-    "react-hot-loader": "^4.12.15",
+    "react-hot-loader": "^4.12.16",
     "tinycolor2": "^1.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-decorators": "^7.6.0",
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
+    "@babel/plugin-proposal-decorators": "^7.7.0",
     "@babel/plugin-proposal-optional-chaining": "^7.6.0",
-    "@babel/polyfill": "^7.6.0",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/preset-react": "^7.6.3",
-    "@emotion/babel-preset-css-prop": "^10.0.22",
-    "@types/jest": "^24.0.19",
+    "@babel/polyfill": "^7.7.0",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
+    "@emotion/babel-preset-css-prop": "^10.0.23",
+    "@types/jest": "^24.0.22",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.5",
     "css-loader": "^3.2.0",
-    "eslint": "^6.5.1",
-    "eslint-plugin-jest": "^22.20.0",
+    "eslint": "^6.6.0",
+    "eslint-plugin-jest": "^22.21.0",
     "eslint-plugin-react": "^7.16.0",
     "fast-async": "^6.3.8",
     "file-loader": "^4.2.0",
