--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "copy-webpack-plugin": "^5.0.5",
     "css-loader": "^3.2.0",
     "eslint": "^6.6.0",
+    "eslint-loader": "^3.0.2",
     "eslint-plugin-jest": "^22.21.0",
     "eslint-plugin-react": "^7.16.0",
     "fast-async": "^6.3.8",
