--- a/package.json
+++ b/package.json
@@ -17,41 +17,43 @@
     "jquery": "^3.5.1",
     "jquery-datepicker": "^1.12.3",
     "jwt-decode": "^2.2.0",
+    "material-ui": "^0.20.2",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
-    "query-string": "^6.13.1",
+    "query-string": "^6.13.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
-    "react-hot-loader": "^4.12.21",
-    "tinycolor2": "^1.4.1"
+    "react-hot-loader": "^4.13.0",
+    "save-file": "^2.3.1",
+    "tinycolor2": "^1.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.4",
+    "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-decorators": "^7.10.5",
     "@babel/plugin-proposal-optional-chaining": "^7.11.0",
-    "@babel/polyfill": "^7.10.4",
-    "@babel/preset-env": "^7.11.0",
+    "@babel/polyfill": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@emotion/babel-preset-css-prop": "^10.0.27",
     "@types/jest": "^24.9.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.1.1",
+    "copy-webpack-plugin": "^5.1.2",
     "css-loader": "^3.6.0",
     "eslint": "^6.8.0",
     "eslint-loader": "^3.0.4",
     "eslint-plugin-jest": "^22.21.0",
-    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react": "^7.21.3",
     "eslint-plugin-react-hooks": "^2.5.1",
     "fast-async": "^6.3.8",
     "file-loader": "^4.3.0",
     "html-webpack-plugin": "^3.2.0",
     "npm-run-all": "^4.1.5",
-    "style-loader": "^1.2.1",
-    "webpack": "^4.44.1",
+    "style-loader": "^1.3.0",
+    "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
