--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@hot-loader/react-dom": "^16.13.0",
     "@kemsu/eios-ui": "file:../../@kemsu/eios-ui",
     "@kemsu/react-routing": "file:../../@kemsu/react-routing",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "date-input-polyfill": "^2.14.0",
     "jquery": "^3.5.1",
     "jquery-datepicker": "^1.12.3",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.20",
     "material-ui": "^0.20.2",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
-    "query-string": "^6.13.5",
+    "query-string": "^6.13.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
